find_package(LLVM CONFIG)
if (LLVM_FOUND)
    message(STATUS "Enabling LLVM code generation")
    llvm_map_components_to_libnames(llvm_libs support core bitreader x86codegen)

    add_library(libfir_codegen_llvm STATIC llvm.c)
    set_target_properties(libfir_codegen_llvm PROPERTIES POSITION_INDEPENDENT_CODE ${BUILD_SHARED_LIBS})
    target_include_directories(libfir_codegen_llvm PRIVATE ${LLVM_INCLUDE_DIRS})
    target_link_libraries(libfir_codegen_llvm PRIVATE libfir_support ${llvm_libs})
    target_compile_definitions(libfir_codegen_llvm PRIVATE ${LLVM_DEFINITIONS})

    target_compile_options(libfir_codegen INTERFACE -DFIR_ENABLE_LLVM_CODEGEN)
    target_link_libraries(libfir_codegen INTERFACE libfir_codegen_llvm)
else()
    message(WARNING "Could not find LLVM library, building without LLVM")
endif()
